--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
+    "@azure/functions": "^4.6.0",
     "@azure/storage-blob": "^12.26.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.x",
+    "@types/xlsx": "^0.0.35",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   },
