--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy AZ-Converter in Azure
+name: Build and Deploy API in Azure
 
 on:
   push:
@@ -6,9 +6,21 @@ on:
       - dev
       - main
 
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
+  execute-code-quality-validation:
+    uses: ./.github/workflows/validate.yml
+    with:
+      eslint-enable: true
+      unit-test-enable: true
+    secrets:
+      token: ${{ secrets.GH_TOKEN }}
+
   execute-release:
-    # needs: execute-code-quality-validation
+    needs: execute-code-quality-validation
     uses: ./.github/workflows/release.yml
     with:
       branches: "${{ github.ref_name }}"
@@ -18,7 +30,7 @@ jobs:
       slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
   deploy:
      needs: execute-release
-     runs-on: ubuntu-22.04
+     runs-on: ubuntu-latest
      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
      steps:
        - name: Checkout code
@@ -36,7 +48,15 @@ jobs:
            LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null || echo "v1.0.0")
            echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
            echo "Latest tag is ${{ env.LATEST_TAG }}"
-  
+
+       - name: Authenticate to Azure
+         uses: azure/login@v2
+         with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+       - name: Login Azure Container Registry
+         run: az acr login --name ${{ secrets.ACR_NAME }}
+
        - name: Deploy to Azure
          uses: azure/functions-action@v1.5.1
          with:
