--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,11 +53,8 @@ jobs:
          uses: azure/login@v2
          with:
             creds: ${{ secrets.AZURE_CREDENTIALS }}
-        
-       - name: Login Azure Container Registry
-         run: az acr login --name ${{ secrets.ACR_NAME }}
 
-       - name: Deploy to Azure
+       - name: Deploy in Azure
          uses: azure/functions-action@v1.5.1
          with:
             app-name: 'pohlmanproteanfuncapp'
