--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,11 @@ jobs:
        - name: Set Branch Name
          id: branch_name
          run: echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        
+       - name: Setup Node 20 Environment
+         uses: actions/setup-node@v3
+         with:
+           node-version: 20
 
        - name: Set Latest Tag
          id: set_latest_tag
@@ -58,4 +63,5 @@ jobs:
          uses: azure/functions-action@v1.5.1
          with:
             app-name: 'pohlmanproteanfuncapp'
+            
 
