--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,5 +63,5 @@ jobs:
          uses: azure/functions-action@v1.5.1
          with:
             app-name: 'pohlmanproteanfuncapp'
-            
+            publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
