--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,15 @@ jobs:
            echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
            echo "Latest tag is ${{ env.LATEST_TAG }}"
 
+       - name: 'Resolve Project Dependencies Using Npm'
+         shell: bash
+         run: |
+             pushd './'.''
+             npm install
+             npm run build --if-present
+             npm run test --if-present
+             popd
+    
        - name: Authenticate to Azure
          uses: azure/login@v2
          with:
@@ -63,5 +72,6 @@ jobs:
          uses: azure/functions-action@v1.5.1
          with:
             app-name: 'pohlmanproteanfuncapp'
+            package: '.'
             publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
